--- a/week_04_day_02_dom/dom_02/style.css
+++ b/week_04_day_02_dom/dom_02/style.css
@@ -1,8 +1,3 @@
-/*
-  This is a simple stylesheet for the samble site used for this example..
-  There is no need to look into it
-*/
-
 *, *::before, *::after{
   box-sizing: border-box;
   margin: 0;
@@ -103,3 +98,5 @@ footer{
   justify-content: center;
   align-items: center;
 }
+
+label:nth-child(1)
